--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@
       <div id="button-background">
           <button id="button">JOUER</button>
       </div>
+      <button id="button">
+        <img src="">
+      </button>
     </main>
 
     <script type="text/javascript" src="scripts/app.js"></script>
