mise en forme page d'acceuil

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,21 @@
         </text>
       </svg>
       <div id="button-background">
-          <button id="button">JOUER</button>
+          <a href="jeu.html">
+            <button id="button">JOUER</button>
+          </a>
       </div>
-      <button id="button">
-        <img src="">
-      </button>
+
+      <div class="social_network">
+        <img src="images/fb.png">
+        <img src="images/twitter.png">
+        <img src="images/google.png">
+      </div>
+      <div class="parametre">
+          <img src="images/parametre.png">
+      </div>
+      
+
     </main>
 
     <script type="text/javascript" src="scripts/app.js"></script>
