--- a/public/jeu.html
+++ b/public/jeu.html
@@ -68,10 +68,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <p id="winlose">Victoire</p>
-                <img src="images/trophy.png">
-                <button type="button">
-                    RECOMMENCER
-                </button>
+                <img id="modal-img" src="images/trophy.png">
             </div>
         </div>
     </main>
